@@ -30,9 +30,10 @@
 - After more than eight months of development, aider.el is more than a simple aider UI now. Comparing to its forked peer (aidermacs), Aider.el has brought in lots of application-level features and tools to enhance daily programming. These include:
   - AI-assisted agile development methodologies (like [[./aider-agile.el][TDD, refactoring]] and [[./aider-legacy-code.el][legacy code handling]] based on established software engineering books)
   - [[./aider-git.el][Diff extraction and AI code review tools]]
-  - [[./aider-code-read.el][Advanced code / module reading assistant]]
+  - [[./aider-code-read.el][Code / module reading AI assistant]]
   - [[./aider-software-planning.el][Software planning / brainstorming discussion capabilities]]
   - Let aider to fix the errors reported by flycheck
+  - Expand context by adding current file's dependencies/dependents
   - [[./aider-git.el][Code / repo evolution analysis]] with git blame and git log
   - [[./aider-bootstrap.el][Utilities for bootstrapping new files and projects]].
   - Organize project with repo specific [[./aider-prompt-mode.el][Aider prompt file]]
@@ -234,11 +235,11 @@ If you used installed aider.el through melpa and package-install, just need to ~
 - [-] Import useful MCP feature to aider [1/2]
   - [X] Software planning discussion
   - [ ] Other
-- [ ] Learn and migrate useful feature from popular AI coding tool
-- [ ] Better way to batch add relevant files from repo to aider session [0/2]
-  - [ ] Dependencies and dependent on current file
+- [ ] Learn and migrate useful feature from popular AI coding tool / MCP
+- [-] Better way to batch add relevant files from repo to aider session [1/2]
+  - [X] Dependencies and dependent on current file
   - [ ] Relevant files for current context
-- [-] Consider integrating more solid / widely used package with aider [1/4]
+- [-] Consider AI + solid / widely used package [1/4]
   - [-] magit [5/6]
     - [X] show last commit
     - [X] show commits history
@@ -247,7 +248,7 @@ If you used installed aider.el through melpa and package-install, just need to ~
     - [X] diff pull / code review
     - [ ] suggest code change given code review feedback
   - [X] flycheck
-  - [ ] compile output
+  - [ ] compile / test output
   - [ ] projectile
 - [ ] Thinking on how to simplify the menu / commands
   - Only keep frequently used items in the first level
